Fix thrid picture readability

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
   display: inline-block;
   padding: 3em 2em;
   border-radius: 10px;
-  min-width: 400px;
+  min-width: 350px;
   max-width: 600px;
 }
 
@@ -48,7 +48,7 @@
 }
 
 .card-third {
-  background-image: linear-gradient(90deg, rgba(190,255,242,1) 0%, rgba(0,255,239,1) 100%);;
+  background-image: linear-gradient(90deg, rgb(81, 214, 214) 0%, rgb(0, 218, 170) 100%);;
 }
 
 .icon {
